# myfirstgenAi

./: .gitignore  README.md  example.env  llm_manager.py  main.py  mynb.ipynb  pyproject.toml
static/: chatbot.html  index.html
